<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/best_players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/best_players"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/W"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_weight="0.55" />

    <TextView
        android:id="@+id/W"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/W"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/best_players"
        app:layout_constraintEnd_toStartOf="@id/L"
        app:layout_constraintStart_toEndOf="@id/best_players"
        app:layout_constraintTop_toTopOf="@id/best_players"
        app:layout_constraintHorizontal_weight="0.15" />

    <TextView
        android:id="@+id/L"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/L"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/best_players"
        app:layout_constraintEnd_toStartOf="@id/win_percentage"
        app:layout_constraintStart_toEndOf="@id/W"
        app:layout_constraintTop_toTopOf="@id/W"
        app:layout_constraintHorizontal_weight="0.15" />

    <TextView
        android:id="@+id/win_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/win_percentage"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/best_players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/L"
        app:layout_constraintTop_toTopOf="@id/L"
        app:layout_constraintHorizontal_weight="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>